--- a/tox.ini
+++ b/tox.ini
@@ -14,4 +14,4 @@ deps =
     pytest-cov==4.0.0
 commands =
     python -c "import tests.tox_banner"
-    py.test --cov-report term-missing --cov=bug_trail_core
+    py.test --cov-report term-missing --cov=cli_tool_audit
