--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "cli_tool_audit"
-version = "1.0.6"
-description = "Audit for existance and vesion number of cli tools."
+version = "1.0.7"
+description = "Audit for existance and version number of cli tools."
 authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
 keywords = ["cli tooling", "version numbers", ]
 classifiers = [
@@ -64,13 +64,14 @@ tomlkit = ">=0.12.3"
 black = ">=23.11.0"
 pytest = ">=7.4.3"
 pytest-cov = ">=4.1.0"
+tox = "*"
 pylint = ">=3.0.2"
 ruff = ">=0.1.9"
 
 # types
 mypy = ">=1.8.0"
 types-toml = "*"
-types-colorama ="*"
+types-colorama = "*"
 
 # more testing
 # pytest-snapshot = ">=0.9.0"
@@ -83,13 +84,17 @@ scriv = ">=1.5.0"
 
 # docs
 interrogate = ">=1.5.0"
-#pydoctest = ">=0.1.22"
+pydoctest = ">=0.1.22"
 pdoc3 = ">=0.10.0"
+mdformat = ">=0.7.17"
+linkcheckmd = ">=1.4.0"
+codespell = ">=2.2.6"
+pyenchant = ">=3.2.2"
 #
 # contract
 # griffe = ">=0.38.1"
 
-tox="*"
+
 [tool.black]
 line-length = 120
 target-version = ['py39']
