--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cli_tool_audit"
-version = "1.0.7"
+version = "1.1.0"
 description = "Audit for existence and version number of cli tools."
 authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
 keywords = ["cli tooling", "version numbers", ]
@@ -57,6 +57,9 @@ colorlog = ">=6.8.0"
 # Config
 toml = ">=0.10.2"
 tomlkit = ">=0.12.3"
+
+# metadata
+importlib-metadata = { version = ">=7.0.1", python = "<3.8" }
 
 [tool.poetry.dev-dependencies]
 
