--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "cli_tool_audit"
-version = "1.2.0"
+version = "2.0.0"
 description = "Audit for existence and version number of cli tools."
 authors = ["Matthew Martin <matthewdeanmartin@gmail.com>"]
 keywords = ["cli tooling", "version numbers", ]
@@ -53,6 +53,7 @@ packaging = ">=23.2"
 prettytable = ">=3.9.0"
 colorama = ">=0.4.6"
 colorlog = ">=6.8.0"
+tqdm = ">=4.66.1"
 
 # Config
 toml = ">=0.10.2"
@@ -244,36 +245,40 @@ exclude_also = [
 ]
 
 [tool.cli-tools]
-pipx = {name = "pipx", version = ">=1.0.0", version_switch = "--version"}
-mypy = {name = "mypy", version = ">=1.0.0"}
-pylint = {name = "pylint", version = ">=1.0.0"}
-black = {name = "black", version = ">=1.0.0"}
-pygount = {name = "pygount", version = ">=1.6.0"}
-ruff = {name = "ruff", version = "0.*"}
-vulture = {name = "vulture", version = "*"}
+make = {name = "make", version = ">=3.81", schema = "semver"}
+python = {name = "python", version = ">=3.11.1", schema = "semver"}
+java = {name = "java", version = ">=17.0.6", schema = "semver"}
 
-#cat = {  version = ">=8.32", version_switch = "--version" }
-#bash = {  version = ">=5.2.12", version_switch = "--version" }
-make = {name = "make", version = ">=3.81"}
-python = {name = "python", version = ">=3.11.1"}
-terraform = {name = "terraform", version = ">=1.2.9"}
-java = {name = "java", version = ">=17.0.6"}
-# demo of files that don't exist
-doesnotexist = {name = "doesnotexist", version = ">=1.0.0"}
-# Just check existence
-notepad = {name = "notepad", only_check_existence = true}
-rustc = {name = "rustc", version = ">=1.67.0"}
-"yes.exe" = {name = "yes.exe", version = ">=1.0.0"}
-"yes" = {name = "yes", version = "~1.0.0"}
-podman = {name = "podman", version = "^4.6.0"}
-tesseract = {name = "tesseract", version = ">=5.1.0.20220510"}
-pandoc = {name = "pandoc", version = ">=2.7.3"}
-nano = {name = "nano", version = ">=7.1"}
-shellcheck = {name = "shellcheck", version = ">=0.8.0"}
-choco = {name = "choco", version = ">=0.10.13"}
-brew = {name = "brew", version = ">=0.0.0", if_os = "darwin"}
-poetry = {name = "poetry", version_snapshot = "Poetry (version 1.5.1)"}
-
+#
+#pipx = {name = "pipx", version = ">=1.0.0", version_switch = "--version", schema = "semver"}
+#mypy = {name = "mypy", version = ">=1.0.0", schema = "semver"}
+#pylint = {name = "pylint", version = ">=1.0.0", schema = "semver"}
+#black = {name = "black", version = ">=1.0.0", schema = "semver"}
+#pygount = {name = "pygount", version = ">=1.6.0", schema = "semver"}
+#ruff = {name = "ruff", version = "0.*", schema = "semver"}
+#vulture = {name = "vulture", version = "*", schema = "semver"}
+#
+##cat = {  version = ">=8.32", version_switch = "--version" }
+##bash = {  version = ">=5.2.12", version_switch = "--version" }
+#
+#terraform = {name = "terraform", version = ">=1.2.9", schema = "semver"}
+#
+## demo of files that don't exist
+#doesnotexist = {name = "doesnotexist", version = ">=1.0.0", schema = "semver"}
+## Just check existence
+#notepad = {name = "notepad", schema = "existence"}
+#rustc = {name = "rustc", version = ">=1.67.0", schema = "semver"}
+#"yes.exe" = {name = "yes.exe", version = ">=1.0.0", schema = "semver"}
+#"yes" = {name = "yes", version = "~1.0.0", schema = "semver"}
+#podman = {name = "podman", version = "^4.6.0", schema = "semver"}
+#tesseract = {name = "tesseract", version = ">=5.1.0.20220510", schema = "semver"}
+#pandoc = {name = "pandoc", version = ">=2.7.3", schema = "semver"}
+#nano = {name = "nano", version = ">=7.1", schema = "semver"}
+#shellcheck = {name = "shellcheck", version = ">=0.8.0", schema = "semver"}
+#choco = {name = "choco", version = ">=0.10.13", schema = "semver"}
+#brew = {name = "brew", version = ">=0.0.0", schema = "semver", if_os = "darwin"}
+#poetry = {name = "poetry", version = "Poetry (version 1.5.1)", schema = "snapshot"}
+#
 
 #[tool.cli-tools]
 #foobar = {  version = ">=1.0.0"}
