--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,10 @@ envlist =
 
 [testenv]
 deps =
-    parameterized
-    pytest==7.2.1
-    pytest-cov==4.0.0
+    # parameterized
+    pytest==7.4.4
+    pytest-cov==4.1.0
+    hypothesis>=6.96.0
 commands =
     python -c "import tests.tox_banner"
     py.test --cov-report term-missing --cov=cli_tool_audit
