--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ pytest-cov = ">=4.1.0"
 pytest-xdist =">=3.5.0"
 pytest-randomly=">=3.15.0"
 pytest-sugar =">=0.9.7"
+pytest-mock = ">=3.6.1"
 
 hypothesis = ">=6.96.0"
 tox = "*"
