--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,7 @@ tomlkit = ">=0.12.3"
 
 
 [tool.poetry.dev-dependencies]
+setuptools = ">=70"
 pyclean = ">=3.0.0"
 vulture = ">=2.11"
 deadcode = ">=2.3.0"
@@ -75,6 +76,8 @@ pytest-cov = ">=4.1.0"
 pytest-xdist =">=3.5.0"
 pytest-randomly=">=3.15.0"
 pytest-sugar =">=0.9.7"
+pytest-mock = ">=3.6.1"
+pytest-network= "*"
 
 hypothesis = ">=6.96.0"
 tox = "*"
