--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,11 @@ envlist =
 [testenv]
 deps =
     # parameterized
-    pytest==7.4.4
-    pytest-cov==4.1.0
+    pytest>=7.4.4
+    pytest-cov>=4.1.0
     hypothesis>=6.96.0
+    pytest-network
+    pytest-mock
 commands =
     python -c "import tests.tox_banner"
     py.test --cov-report term-missing --cov=cli_tool_audit
