--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,51 +7,26 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4.1.7
-    - uses: actions/setup-python@v5.1.1
+    - uses: actions/checkout@v4.2.2
       with:
-        python-version: '3.11'
+        persist-credentials: false
+    - uses: actions/setup-python@v5.3.0
+      with:
+        python-version: '3.14'
           # cache: 'pipenv' # caching pipenv dependencies
     - name: Install poetry and pipx
       run: |
-        pip install poetry && pip install pipx
-
-    - name: Install global dependencies
-      run: |
-        pipx install isort && pipx install black && pipx install bandit && \
-        pipx install pylint && pipx install pre-commit && pipx install poetry
-
-    - name: Install Dependencies
-      run: poetry install --with dev
+        pip install pipx && pip install uv && pipx install uv && uv sync
 
     - name: Run Makefile
       run: make check
     - name: Run make
-      run: poetry run make publish
+      run: uv run hatch publish
     - name: Upload Package
-      uses: actions/upload-artifact@v4.3.6
+      uses: actions/upload-artifact@v4.5.0
       with:
         name: packages
         path: dist/
         if-no-files-found: error
         retention-days: 1
 
-
-  pypi-publish:
-    name: Upload release to PyPI
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/cli-tool-audit
-    permissions:
-      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
-    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    steps:
-    - name: Get packages
-      uses: actions/download-artifact@v4.1.8
-      with:
-        name: packages
-        path: dist/
-    - name: Publish package distributions to PyPI
-      uses: pypa/gh-action-pypi-publish@v1.9.0
-    needs: build
