--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,15 +7,13 @@ repos:
       - id: check-added-large-files
       - id: check-yaml
       - id: check-builtin-literals
-      - id: check-byte-order-marker
+      - id: fix-byte-order-marker
       - id: check-case-conflict
       - id: check-merge-conflict
       - id: check-symlinks
       - id: check-toml
       - id: debug-statements
       - id: detect-private-key
-      - id: fix-encoding-pragma
-        args: [ --remove ]
       - id: forbid-new-submodules
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.21.2
@@ -87,9 +85,4 @@ repos:
 #        additional_dependencies:
 #          - mdformat-gfm
 #          - mdformat-black
-  - repo: https://github.com/adamchainz/blacken-docs
-    rev: 1.20.0
-    hooks:
-    -   id: blacken-docs
-        additional_dependencies:
-        - black==23.12.1
+
