--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,6 +5,7 @@ repos:
     hooks:
       # each hook takes about 1s to run. These are expensive-ish checks
       - id: check-added-large-files
+        args: ['--maxkb=999']
       - id: check-yaml
       - id: check-builtin-literals
       - id: fix-byte-order-marker
